--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_core_web: 1.5.4
   firebase_storage: 10.1.0
   firebase_storage_web: 3.2.8
-  flutter_datetime_picker: 1.5.1
+  flutter_datetime_picker:
   font_awesome_flutter: 10.1.0
   google_fonts: 2.2.0
   google_sign_in: 5.2.1
@@ -63,6 +63,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  android_alarm_manager_plus: ^2.0.6
+  flutter_alarm_clock: ^0.0.2
+  flutter_local_notifications: ^6.0.0
+  timezone: ^0.7.0
 
 dev_dependencies:
   build_runner: 2.1.7
